examples/test/testpolicy18709.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18709
  namespace: namespace330
spec:
  podSelector:
    matchLabels:
      key5: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value0
          key48: value49
          key32: value8
      podSelector:
        matchLabels:
          key34: value29
